Added a few personal names to `dictionary.yaml`.

--- a/dictionary.yaml
+++ b/dictionary.yaml
@@ -3011,3 +3011,249 @@ peris:
   ety: From PIE {*per-}.
   defs:
     - fear
+
+Jacobos:
+  typ: m
+  ety: From Latin {Jacōbus}.
+  defs:
+    - Jacob, James, Jacques
+
+Joanna:
+  typ: m
+  ety: From Ancient Greek {Ἰωάννης}.
+  defs:
+    - John
+
+Robertos:
+  typ: m
+  ety: From Latin {Robertus}.
+  defs:
+    - Robert
+
+Michael:
+  typ: m
+  ety: From Ancient Greek {Μῐχᾱήλ}.
+  defs:
+    - Michael
+
+Viljelmos:
+  typ: m
+  ety: Ultimately from Proto-Germanic {*Wiljahelmaz}.
+  defs:
+    - William, Wilhelm, Guillermo, Guillaume
+
+David:
+  typ: m
+  ety: From Ancient Greek {Δαυῑ́δ}.
+  defs:
+    - David
+
+Richardos:
+  typ: m
+  ety: From Latin {Richardus}.
+  defs:
+    - Richard, Ricardo
+
+Josephos:
+  typ: m
+  ety: From Latin {Iōsēphus}.
+  defs:
+    - Joseph, José
+
+Thoma:
+  typ: m
+  ety: From Ancient Greek {Θωμᾶς}.
+  defs:
+    - Thomas
+
+Carolos:
+  typ: m
+  ety: From Latin {Carolus}.
+  defs:
+    - Charles, Carlos
+
+Christophoros:
+  typ: m
+  ety: From Ancient Greek {Χρῑστόφορος}.
+  defs:
+    - Christopher
+
+Daniel:
+  typ: m
+  ety: From Ancient Greek {Δᾱνῑήλ}.
+  defs:
+    - Daniel
+
+Matthaios:
+  typ: m
+  ety: From Ancient Greek {Ματθαῖος}.
+  defs:
+    - Matthew
+
+Antonios:
+  typ: m
+  ety: From Latin {Antonius}.
+  defs:
+    - Anthony
+
+Donald:
+  typ: m
+  ety: From English {Donald}.
+  defs:
+    - Donald
+
+Marcos:
+  typ: m
+  ety: From Latin {Marcus}.
+  defs:
+    - Mark
+
+Paulos:
+  typ: m
+  ety: From Latin {Paulus}.
+  defs:
+    - Paul
+
+Stephanos:
+  typ: m
+  ety: From Ancient Greek {Στέφανος}.
+  defs:
+    - Steven, Stephen, Stephanus
+
+Andrea:
+  typ: m
+  ety: From Ancient Greek {Ἀνδρέᾱς}.
+  defs:
+    - Andrew, André, Andrés
+
+Jesus:
+  typ: m
+  ety: From Ancient Greek {Ἰησοῦς}.
+  defs:
+    - Jesus, Joshua
+
+Braián:
+  typ: m
+  ety: From English {Brian}.
+  defs:
+    - Brian, Bryan
+
+Georgios:
+  typ: m
+  ety: From Ancient Greek {Γεώργῐος}.
+  defs:
+    - George, Jorge
+
+Edvardos:
+  typ: m
+  ety: Ultimately from Proto-Germanic {*Audawarduz}.
+  defs:
+    - Edward, Eduardo
+
+Reginvaldos:
+  typ: m
+  ety: Ultimately from Proto-Germanic {*Raginawaldaz}.
+  defs:
+    - Ronald, Reginald, Reynold, Reinhold
+
+Timotheos:
+  typ: m
+  ety: From Ancient Greek {Τῑμόθεος}.
+  defs:
+    - Timothy
+
+Jasón:
+  typ: m
+  ety: From Ancient Greek {Ἰάσων}.
+  defs:
+    - Jason
+
+Jotfredos:
+  typ: m
+  ety: Ultimately from Proto-Germanic {*Gautafriþuz}.
+  defs:
+    - Jeffrey, Geoffrey, Jauffre, Gaufredo, Gottfried
+
+Raián:
+  typ: m
+  ety: From English {Ryan}.
+  defs:
+    - Ryan
+
+Nikola:
+  typ: m
+  ety: Ultimately from Ancient Greek {Νῑκόλᾱος}.
+  defs:
+    - Nicholas, Nikola, Nikolai
+
+Erik:
+  typ: m
+  ety: Ultimately from Proto-Germanic {*Aizarīkijaz}.
+  defs:
+    - Eric, Erik
+
+Jonathán:
+  typ: m
+  ety: From Ancient Greek {Ἰωνάθαν}.
+  defs:
+    - Jonathan
+
+Laurencios:
+  typ: m
+  ety: From Latin {Laurentius}.
+  defs:
+    - Lawrence, Laurence, Lorenzo, Laurent
+
+Justínos:
+  typ: m
+  ety: From Latin {Iūstīnus}.
+  defs:
+    - Justin
+
+Benjamín:
+  typ: m
+  ety: From Ancient Greek {Βενιᾱμῑ́ν}.
+  defs:
+    - Benjamin
+
+Samuel:
+  typ: m
+  ety: From Ancient Greek {Σαμουήλ}.
+  defs:
+    - Samuel
+
+Gregorios:
+  typ: m
+  ety: From Ancient Greek {Γρηγόριος}.
+  defs:
+    - Gregory
+
+Raimondos:
+  typ: m
+  ety: Equivalent to English and French {Raymond}.
+  defs:
+    - Raymond, Ramón
+
+Alexandros:
+  typ: m
+  ety: From Ancient Greek {Ἀλέξανδρος}.
+  defs:
+    - Alexander, Alejandro
+
+Hendrik:
+  typ: m
+  ety: Ultimately from Proto-Germanic {*Haimarīks}.
+  defs:
+    - Henry, Henrik, Henri, Heinrich, Enrique, Enrico
+
+Adám:
+  typ: m
+  ety: From Ancient Greek {Ᾱ̓δᾱ́μ}.
+  defs:
+    - Adam
+
+Petros:
+  typ: m
+  ety: From Ancient Greek {Πέτρος}.
+  defs:
+    - Peter, Pedro
