modified:   grammar/Makefile new file:   grammar/compiled/bloti.latex new file:   grammar/compiled/doti.latex new file:   grammar/compiled/esti-be.latex new file:   grammar/compiled/esti-eat.latex new file:   grammar/compiled/iti.latex new file:   grammar/compiled/voide.latex new file:   grammar/compiled/vopeti.latex modified:   grammar/grammar.latex new file:   grammar/grammar.pdf modified:   grammar/verbs/TEMPLATE-ACTIVE.latex.liquid modified:   grammar/verbs/TEMPLATE-FULL.latex.liquid new file:   grammar/verbs/bloti.yaml deleted:    grammar/verbs/deneti.txt deleted:    grammar/verbs/iti.txt

--- a/grammar/Makefile
+++ b/grammar/Makefile
@@ -1,5 +1,5 @@
 all:
-	#make tables
+	make tables
 	xelatex grammar.latex
 
 tables:
@@ -9,3 +9,4 @@ tables:
 	python parse.py verbs/esti-be.yaml verbs/TEMPLATE-ACTIVE.latex.liquid > compiled/esti-be.latex
 	python parse.py verbs/iti.yaml verbs/TEMPLATE-ACTIVE.latex.liquid > compiled/iti.latex
 	python parse.py verbs/voide.yaml verbs/TEMPLATE-FULL.latex.liquid > compiled/voide.latex
+	python parse.py verbs/bloti.yaml verbs/TEMPLATE-FULL.latex.liquid > compiled/bloti.latex
